# excitation

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yaml  test.yaml
src/: main.rs
src/generator/: common.rs  mod.rs  test_net_1.rs  test_net_2.rs  test_net_3.rs
