[package]
name = "excitation"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["sublimer <sublimer.me@gmail.com>"]
description = "The CLI tool to generate IP addresses for documentation as defined by RFC5737"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.7", features = ["derive"] }
